Make sure to toggle Parent container visibility on nav change

--- a/templates/buddypress/css/activites-de-publication.css
+++ b/templates/buddypress/css/activites-de-publication.css
@@ -5,7 +5,8 @@
 }
 
 #bp-nouveau-activity-form.hide,
-#activites-de-publication-list.hide {
+#activites-de-publication-list.hide,
+#activites-de-publication-parent.hide {
 	display: none;
 }
 
